[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Recover/HeavyBandit_Recover_2.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Recover/HeavyBandit_Recover_7.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Jump/HeavyBandit_Jump_0.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Hurt/HeavyBandit_Hurt_0.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Recover/HeavyBandit_Recover_4.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Recover/HeavyBandit_Recover_6.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Hurt/HeavyBandit_Hurt_1.png" type="Texture" id=7]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Recover/HeavyBandit_Recover_0.png" type="Texture" id=8]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Recover/HeavyBandit_Recover_5.png" type="Texture" id=9]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Combat Idle/HeavyBandit_CombatIdle_2.png" type="Texture" id=10]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Recover/HeavyBandit_Recover_1.png" type="Texture" id=11]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Combat Idle/HeavyBandit_CombatIdle_3.png" type="Texture" id=12]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Recover/HeavyBandit_Recover_3.png" type="Texture" id=13]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Combat Idle/HeavyBandit_CombatIdle_1.png" type="Texture" id=14]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Idle/HeavyBandit_Idle_2.png" type="Texture" id=15]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Combat Idle/HeavyBandit_CombatIdle_0.png" type="Texture" id=16]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Idle/HeavyBandit_Idle_0.png" type="Texture" id=17]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Idle/HeavyBandit_Idle_1.png" type="Texture" id=18]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Idle/HeavyBandit_Idle_3.png" type="Texture" id=19]
[ext_resource path="res://src/Actors/BanditNPC.gd" type="Script" id=20]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Run/HeavyBandit_Run_2.png" type="Texture" id=22]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Run/HeavyBandit_Run_4.png" type="Texture" id=23]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Run/HeavyBandit_Run_5.png" type="Texture" id=24]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Run/HeavyBandit_Run_6.png" type="Texture" id=25]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Run/HeavyBandit_Run_0.png" type="Texture" id=26]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Run/HeavyBandit_Run_1.png" type="Texture" id=27]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Run/HeavyBandit_Run_7.png" type="Texture" id=28]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Run/HeavyBandit_Run_3.png" type="Texture" id=29]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Death/HeavyBandit_Death_0.png" type="Texture" id=30]
[ext_resource path="res://assets/Effects/TalkQuestionMark.png" type="Texture" id=31]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Attack/HeavyBandit_Attack_0.png" type="Texture" id=32]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Attack/HeavyBandit_Attack_2.png" type="Texture" id=33]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Attack/HeavyBandit_Attack_3.png" type="Texture" id=34]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Attack/HeavyBandit_Attack_5.png" type="Texture" id=35]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Attack/HeavyBandit_Attack_6.png" type="Texture" id=36]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Attack/HeavyBandit_Attack_4.png" type="Texture" id=37]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Attack/HeavyBandit_Attack_7.png" type="Texture" id=38]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Heavy Bandit/Attack/HeavyBandit_Attack_1.png" type="Texture" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 28 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 30 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "CombatIdle",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 39 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 38 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ) ],
"loop": false,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.24178
height = 16.3784

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[node name="BanditNPC" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 8
script = ExtResource( 20 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.44545, 4.03723 )
shape = SubResource( 2 )

[node name="QuestionMark" type="Sprite" parent="."]
visible = false
position = Vector2( 7.95284, -27.9925 )
texture = ExtResource( 31 )

[node name="TalkArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkArea"]
position = Vector2( -0.598948, 0.239185 )
shape = SubResource( 3 )

[connection signal="body_entered" from="TalkArea" to="." method="_on_TalkArea_body_entered"]
[connection signal="body_exited" from="TalkArea" to="." method="_on_TalkArea_body_exited"]
